验证 iconPosition 只能为 left 或 right

--- a/index.html
+++ b/index.html
@@ -34,11 +34,11 @@
 </head>
 <body>
 <div id="app">
-    <g-button>我爱JS</g-button>
-    <g-button icon = "settings">我爱JS</g-button>
-    <g-button icon = "settings" icon-position="right">我爱JS</g-button>
+    <g-button>按钮</g-button>
+    <g-button icon = "settings">按钮</g-button>
+    <g-button icon = "settings" icon-position="right">按钮</g-button>
 </div>
 <script src="src/app.js"></script>
-<script src="//at.alicdn.com/t/font_1986870_bbl3tmkr3yi.js"></script>
+<script src="//at.alicdn.com/t/font_1986870_on46p2z701c.js"></script>
 </body>
 </html>
