--- a/index.html
+++ b/index.html
@@ -26,10 +26,6 @@
         }
     </style>
     <style>
-        .icon{
-            width: 1em;
-            height: 1em;
-        }
     </style>
 </head>
 <body>
@@ -37,6 +33,7 @@
     <g-button>按钮</g-button>
     <g-button icon = "settings">按钮</g-button>
     <g-button icon = "settings" icon-position="right">按钮</g-button>
+    <g-icon name="download"></g-icon>
 </div>
 <script src="src/app.js"></script>
 <script src="//at.alicdn.com/t/font_1986870_on46p2z701c.js"></script>
