--- a/index.html
+++ b/index.html
@@ -41,6 +41,11 @@
               @click="loading3 = !loading3">
         按钮
     </g-button>
+    <g-button-group>
+        <g-button icon="left">上一页</g-button>
+        <g-button>更多</g-button>
+        <g-button icon="right" icon-position="right">下一页</g-button>
+    </g-button-group>
 </div>
 <script src="src/app.js"></script>
 <script src="//at.alicdn.com/t/font_1986870_8abrayr8jct.js"></script>
