添加 input.vue 的测试用例

--- a/index.html
+++ b/index.html
@@ -41,12 +41,7 @@
 <body>
 <div id="app">
   <div class="box">
-    <g-input value="王老吉" disabled></g-input>
-    <g-input value="加多宝" readonly></g-input>
-    <g-input value="和其正"></g-input>
-  </div>
-  <div class="box">
-    <g-input value="王加和" error="姓名不能少于两个字"></g-input>
+    <g-input value="王老吉" @change="inputChange"></g-input>
   </div>
   <div class="box">
     <g-button :loading="loading1" @click="loading1 = !loading1">
