初步实现 row 和 col

--- a/index.html
+++ b/index.html
@@ -40,6 +40,27 @@
 </head>
 <body>
 <div id="app">
+  <g-row>
+    <g-col span="12"></g-col>
+    <g-col span="12"></g-col>
+  </g-row>
+  <g-row>
+    <g-col span="8"></g-col>
+    <g-col span="8"></g-col>
+    <g-col span="8"></g-col>
+  </g-row>
+  <g-row>
+    <g-col span="6"></g-col>
+    <g-col span="6"></g-col>
+    <g-col span="6"></g-col>
+    <g-col span="6"></g-col>
+  </g-row>
+  <g-row>
+    <g-col span="4"></g-col>
+    <g-col span="20"></g-col>
+  </g-row>
+
+  <hr>
   <div class="box">
     <g-input v-model="message"></g-input>
     <p>{{message}}</p>
