添加 row 的 align=left/right/center 属性.

--- a/index.html
+++ b/index.html
@@ -41,13 +41,21 @@
 <body>
 <div id="app">
   <g-row gutter="20">
-    <g-col span="12"></g-col>
-    <g-col span="12"></g-col>
+    <g-col span="12">
+      <g-row align="right">
+        <g-col>1</g-col>
+        <g-col>2</g-col>
+        <g-col>3</g-col>
+        <g-col>4</g-col>
+        <g-col>5</g-col>
+      </g-row>
+    </g-col>
+    <g-col span="12">2</g-col>
   </g-row>
-  <g-row>
-    <g-col span="8"></g-col>
-    <g-col span="8"></g-col>
-    <g-col span="8"></g-col>
+  <g-row align="right">
+    <g-col span="8">12</g-col>
+    <g-col span="8">23</g-col>
+    <g-col span="8">34</g-col>
   </g-row>
   <g-row>
     <g-col span="6"></g-col>
