--- a/index.html
+++ b/index.html
@@ -33,26 +33,29 @@
       }
   </style>
   <style>
-    .box{
-        margin: 20px;
-    }
+      .box {
+          margin: 20px;
+      }
   </style>
 </head>
 <body>
 <div id="app">
   <g-row gutter="20">
-    <g-col span="12">
-      <g-row align="right">
-        <g-col>1</g-col>
-        <g-col>2</g-col>
-        <g-col>3</g-col>
-        <g-col>4</g-col>
-        <g-col>5</g-col>
-      </g-row>
-    </g-col>
-    <g-col span="12">2</g-col>
+    <g-col span="2"
+           :phone="{span:24}"
+           :ipad="{span:8}"
+           :narrow-pc="{span:4}"
+           :pc="{span:2}"
+           :wide-pc="{span:1}"></g-col>
+    <g-col span="22"
+           :phone="{span:24}"
+           :ipad="{span:16}"
+           :narrow-pc="{span:20}"
+           :pc="{span:22}"
+           :wide-pc="{span:23}"
+    ></g-col>
   </g-row>
-  <g-row align="right">
+  <g-row gutter="20">
     <g-col span="8">12</g-col>
     <g-col span="8">23</g-col>
     <g-col span="8">34</g-col>
@@ -71,7 +74,7 @@
   <hr>
   <div class="box">
     <g-input v-model="message"></g-input>
-    <p>{{message}}</p>
+    <p>{{ message }}</p>
     <button @click="message+=2">按钮</button>
   </div>
   <div class="box">
