--- a/index.html
+++ b/index.html
@@ -33,66 +33,20 @@
       }
   </style>
   <style>
-      .box {
-          margin: 20px;
+      .demo {
+          background: #ddd;
+          border: solid 1px #666;
+          height: 100px;
       }
   </style>
 </head>
 <body>
 <div id="app">
-  <g-row gutter="20">
-    <g-col span="24"
-           :ipad="{span:8}"
-           :narrow-pc="{span:4}"
-           :pc="{span:2}"
-           :wide-pc="{span:1}"></g-col>
-    <g-col span="24"
-           :ipad="{span:16}"
-           :narrow-pc="{span:20}"
-           :pc="{span:22}"
-           :wide-pc="{span:23}"
-    ></g-col>
-  </g-row>
-  <g-row gutter="20">
-    <g-col span="8">12</g-col>
-    <g-col span="8">23</g-col>
-    <g-col span="8">34</g-col>
-  </g-row>
   <g-row>
-    <g-col span="6"></g-col>
-    <g-col span="6"></g-col>
-    <g-col span="6"></g-col>
-    <g-col span="6"></g-col>
+    <g-col span="23" offset="1" :narrow-pc="{span:12,offset:12}">
+      <div class="demo"></div>
+    </g-col>
   </g-row>
-  <g-row>
-    <g-col span="4"></g-col>
-    <g-col span="20"></g-col>
-  </g-row>
-
-  <hr>
-  <div class="box">
-    <g-input v-model="message"></g-input>
-    <p>{{ message }}</p>
-    <button @click="message+=2">按钮</button>
-  </div>
-  <div class="box">
-    <g-button :loading="loading1" @click="loading1 = !loading1">
-      按钮
-    </g-button>
-    <g-button icon="settings" :loading="loading2"
-              @click="loading2 = !loading2">
-      按钮
-    </g-button>
-    <g-button icon="settings" icon-position="right" :loading="loading3"
-              @click="loading3 = !loading3">
-      按钮
-    </g-button>
-    <g-button-group>
-      <g-button icon="left">上一页</g-button>
-      <g-button>更多</g-button>
-      <g-button icon="right" icon-position="right">下一页</g-button>
-    </g-button-group>
-  </div>
 </div>
 <script src="src/app.js"></script>
 </body>
