--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
       }
 
       #app {
-          margin: 20px;
+
       }
 
       body {
@@ -34,19 +34,21 @@
   </style>
   <style>
       .demo {
-          background: #ddd;
           border: solid 1px #666;
-          height: 100px;
+          min-height: 100px;
       }
   </style>
 </head>
 <body>
 <div id="app">
-  <g-row>
-    <g-col span="23" offset="1" :narrow-pc="{span:12,offset:12}">
-      <div class="demo"></div>
-    </g-col>
-  </g-row>
+  <g-layout style="height: 100vh">
+    <g-header class="demo">header</g-header>
+    <g-layout>
+      <g-content class="demo">content</g-content>
+      <g-sider class="demo">sider</g-sider>
+    </g-layout>
+    <g-footer class="demo">footer</g-footer>
+  </g-layout>
 </div>
 <script src="src/app.js"></script>
 </body>
