--- a/index.html
+++ b/index.html
@@ -32,27 +32,10 @@
           font-size: var(--font-size);
       }
   </style>
-  <style>
-      .demo {
-          border: solid 1px #666;
-          min-height: 100px;
-      }
-      .sider{
-          background: #333333;
-          width: 200px;
-      }
-  </style>
 </head>
 <body>
 <div id="app">
-  <g-layout style="height: 100vh">
-    <g-sider class="demo">sider</g-sider>
-    <g-layout>
-      <g-header class="demo">header</g-header>
-      <g-content class="demo">content</g-content>
-      <g-footer class="demo">footer</g-footer>
-    </g-layout>
-  </g-layout>
+  <button @click="showToast">按钮</button>
 </div>
 <script src="src/app.js"></script>
 </body>
