完成三种动画 slide-down fade-in slide-up

--- a/index.html
+++ b/index.html
@@ -35,7 +35,9 @@
 </head>
 <body>
 <div id="app">
-  <button @click="showToast">按钮</button>
+  <button @click="showToast1">按钮</button>
+  <button @click="showToast2">按钮</button>
+  <button @click="showToast3">按钮</button>
 </div>
 <script src="src/app.js"></script>
 </body>
