--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
         <g-icon name="settings"></g-icon>
         周一
       </g-tabs-item>
-      <g-tabs-item name="second">周二</g-tabs-item>
+      <g-tabs-item name="second" disabled>周二</g-tabs-item>
       <g-tabs-item name="third">周三</g-tabs-item>
     </g-tabs-head>
     <g-tabs-body>
