--- a/index.html
+++ b/index.html
@@ -34,25 +34,20 @@
   </style>
 </head>
 <body>
-<div id="app">
-  <g-tabs :selected.sync="selectedTab" @update:selected='yyy'>
-    <g-tabs-head>
-      <template slot="actions">
-        <button>设置</button>
-      </template>
-      <g-tabs-item name="first">
-        <g-icon name="settings"></g-icon>
-        周一
-      </g-tabs-item>
-      <g-tabs-item name="second" disabled>周二</g-tabs-item>
-      <g-tabs-item name="third">周三</g-tabs-item>
-    </g-tabs-head>
-    <g-tabs-body>
-      <g-tabs-pane name="first">周一相关资讯</g-tabs-pane>
-      <g-tabs-pane name="second">周二相关资讯</g-tabs-pane>
-      <g-tabs-pane name="third">周三相关资讯</g-tabs-pane>
-    </g-tabs-body>
-  </g-tabs>
+<div id="app" style="padding-top: 100px;padding-left: 100px">
+  <g-popover>
+    <template slot="content">
+      <div>popover 内容</div>
+    </template>
+    <button>按钮</button>
+  </g-popover>
+
+  <g-popover>
+    <template slot="content">
+      <div>popover 内容</div>
+    </template>
+    <button>按钮</button>
+  </g-popover>
 </div>
 <script src="src/app.js"></script>
 </body>
