实现最简单的 popover

--- a/index.html
+++ b/index.html
@@ -34,7 +34,8 @@
   </style>
 </head>
 <body>
-<div id="app" style="padding-top: 100px;padding-left: 100px">
+<div id="app" style="padding-top: 100px;padding-left: 100px;
+border: solid 1px red;">
   <g-popover>
     <template slot="content">
       <div>popover 内容</div>
