解决当容器有 overflow:hidden 时会有 bug

--- a/index.html
+++ b/index.html
@@ -36,19 +36,21 @@
 <body>
 <div id="app" style="padding-top: 100px;padding-left: 100px;
 border: solid 1px red;">
-  <g-popover>
-    <template slot="content">
-      <div>popover 内容</div>
-    </template>
-    <button>按钮</button>
-  </g-popover>
+  <div style="overflow: hidden;border: solid 1px green;padding: 5px;">
+    <g-popover>
+      <template slot="content">
+        <div>popover 内容</div>
+      </template>
+      <button>按钮</button>
+    </g-popover>
 
-  <g-popover>
-    <template slot="content">
-      <div>popover 内容</div>
-    </template>
-    <button>按钮</button>
-  </g-popover>
+    <g-popover>
+      <template slot="content">
+        <div>popover 内容</div>
+      </template>
+      <button>按钮</button>
+    </g-popover>
+  </div>
 </div>
 <script src="src/app.js"></script>
 </body>
