完成默认样式

--- a/index.html
+++ b/index.html
@@ -34,21 +34,20 @@
   </style>
 </head>
 <body>
-<div id="app" style="padding-top: 100px;padding-left: 100px;
-border: solid 1px red;">
-  <div style="overflow: hidden;border: solid 1px green;padding: 5px;">
+<div id="app">
+  <div style="overflow: hidden;padding: 150px;">
     <g-popover>
       <template slot="content">
-        <div>popover 内容</div>
+        <div>popover 内容dshfjkhsdjfghiowejfsdfnieldsdfsdfjodfjsdfksdjfjskdfjksdjf</div>
       </template>
-      <button>按钮</button>
+      <g-button>按钮</g-button>
     </g-popover>
 
     <g-popover>
       <template slot="content">
         <div>popover 内容</div>
       </template>
-      <button>按钮</button>
+      <g-button>按钮</g-button>
     </g-popover>
   </div>
 </div>
