--- a/index.html
+++ b/index.html
@@ -36,19 +36,31 @@
 <body>
 <div id="app">
   <div style="overflow: hidden;padding: 150px;">
-    <g-popover>
-      <template slot="content">
-        <div>popover 内容dshfjkhsdjfghiowejfsdfnieldsdfsdfjodfjsdfksdjfjskdfjksdjf</div>
-      </template>
-      <g-button>按钮</g-button>
-    </g-popover>
-
-    <g-popover>
+    <g-popover position="left">
       <template slot="content">
         <div>popover 内容</div>
       </template>
       <g-button>按钮</g-button>
     </g-popover>
+    <g-popover position="bottom">
+      <template slot="content">
+        <div>popover 内容dshfjkhsdjfghiowejffksdjfjskdfjksdjf</div>
+      </template>
+      <g-button>按钮</g-button>
+    </g-popover>
+    <g-popover position="top">
+      <template slot="content">
+        <div>popover 内容</div>
+      </template>
+      <g-button>按钮</g-button>
+    </g-popover>
+    <g-popover position="right">
+      <template slot="content">
+        <div>popover 内容</div>
+      </template>
+      <g-button>按钮</g-button>
+    </g-popover>
+
   </div>
 </div>
 <script src="src/app.js"></script>
