添加 hover 事件触发

--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
 </head>
 <body>
 <div id="app">
-  <div style="overflow: hidden;padding: 150px;">
+  <div style="overflow: hidden;padding: 100px;">
     <g-popover position="left">
       <template slot="content">
         <div>popover 内容</div>
@@ -55,6 +55,34 @@
       <g-button>按钮</g-button>
     </g-popover>
     <g-popover position="right">
+      <template slot="content">
+        <div>popover 内容</div>
+      </template>
+      <g-button>按钮</g-button>
+    </g-popover>
+
+  </div>
+
+  <div style="overflow: hidden;padding: 100px;">
+    <g-popover position="left" trigger="hover">
+      <template slot="content">
+        <div>popover 内容</div>
+      </template>
+      <g-button>按钮</g-button>
+    </g-popover>
+    <g-popover position="bottom" trigger="hover">
+      <template slot="content">
+        <div>popover 内容dshfjkhsdjfghiowejffksdjfjskdfjksdjf</div>
+      </template>
+      <g-button>按钮</g-button>
+    </g-popover>
+    <g-popover position="top" trigger="hover">
+      <template slot="content">
+        <div>popover 内容</div>
+      </template>
+      <g-button>按钮</g-button>
+    </g-popover>
+    <g-popover position="right" trigger="hover">
       <template slot="content">
         <div>popover 内容</div>
       </template>
