--- a/index.html
+++ b/index.html
@@ -34,63 +34,12 @@
   </style>
 </head>
 <body>
-<div id="app">
-  <div style="overflow: hidden;padding: 100px;">
-    <g-popover position="left">
-      <template slot="content">
-        <div>popover 内容</div>
-      </template>
-      <g-button>按钮</g-button>
-    </g-popover>
-    <g-popover position="bottom">
-      <template slot="content" slot-scope="{close}">
-        <div>popover 内容</div>
-        <g-button @click="close">关闭</g-button>
-      </template>
-      <g-button>按钮</g-button>
-    </g-popover>
-    <g-popover position="top">
-      <template slot="content">
-        <div>popover 内容</div>
-      </template>
-      <g-button>按钮</g-button>
-    </g-popover>
-    <g-popover position="right">
-      <template slot="content">
-        <div>popover 内容<a href="//baidu.com">百度</a></div>
-      </template>
-      <g-button>按钮</g-button>
-    </g-popover>
-
-  </div>
-
-  <div style="overflow: hidden;padding: 100px;">
-    <g-popover position="left" trigger="hover">
-      <template slot="content">
-        <div>popover 内容</div>
-      </template>
-      <g-button>按钮</g-button>
-    </g-popover>
-    <g-popover position="bottom" trigger="hover">
-      <template slot="content">
-        <div>popover 内容dshfjkhsdjfghiowejffksdjfjskdfjksdjf</div>
-      </template>
-      <g-button>按钮</g-button>
-    </g-popover>
-    <g-popover position="top" trigger="hover">
-      <template slot="content">
-        <div>popover 内容</div>
-      </template>
-      <g-button>按钮</g-button>
-    </g-popover>
-    <g-popover position="right" trigger="hover">
-      <template slot="content">
-        <div>popover 内容</div>
-      </template>
-      <g-button>按钮</g-button>
-    </g-popover>
-
-  </div>
+<div id="app" style="padding: 100px;">
+<g-collapse>
+  <g-collapse-item title="标题1">内容1</g-collapse-item>
+  <g-collapse-item title="标题2">内容2</g-collapse-item>
+  <g-collapse-item title="标题3">内容3</g-collapse-item>
+</g-collapse>
 </div>
 <script src="src/app.js"></script>
 </body>
