collapse 功能完善，single，selected。eventBus实现组件通信，单向数据流。

--- a/index.html
+++ b/index.html
@@ -35,10 +35,10 @@
 </head>
 <body>
 <div id="app" style="padding: 100px;">
-<g-collapse>
-  <g-collapse-item title="标题1">内容1</g-collapse-item>
-  <g-collapse-item title="标题2">内容2</g-collapse-item>
-  <g-collapse-item title="标题3">内容3</g-collapse-item>
+<g-collapse :selected.sync="selectedTab" single>
+  <g-collapse-item title="标题1" name="1">内容11</g-collapse-item>
+  <g-collapse-item title="标题2" name="2">内容2222</g-collapse-item>
+  <g-collapse-item title="标题3" name="3">内容333333</g-collapse-item>
 </g-collapse>
 </div>
 <script src="src/app.js"></script>
