--- a/index.html
+++ b/index.html
@@ -34,7 +34,20 @@
   </style>
 </head>
 <body>
-<div id="app" style="padding: 100px;">
+<div id="app" style="margin: 100px;">
+
+  <div>
+    <g-tabs :selected="selected">
+      <g-tabs-head>
+        <g-tabs-item name="1">标题一</g-tabs-item>
+        <g-tabs-item name="2">标题二</g-tabs-item>
+      </g-tabs-head>
+      <g-tabs-body>
+        <g-tabs-pane name="1">内容1</g-tabs-pane>
+        <g-tabs-pane name="2">内容2</g-tabs-pane>
+      </g-tabs-body>
+    </g-tabs>
+  </div>
 
 <g-collapse :selected.sync="selectedTab" single>
   <g-collapse-item title="标题1" name="1">内容11</g-collapse-item>
